# omni-monitor

./: .clippy.toml  .env.example  .gitignore  Cargo.toml  monitor.md  rustfmt.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  lucide-react.d.ts
frontend/src/api/: auth.ts  client.ts  comments.ts  config.ts  equivalences.ts  errors.ts  export.ts  machines.ts  patients.ts  signals.ts  users.ts
frontend/src/components/: ActiveTherapiesTable.tsx  Chart.tsx  Layout.tsx  MobileNav.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/data-table/: DataTable.tsx
frontend/src/components/patient/: index.ts  patient.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  ColumnFilter.tsx  Combobox.tsx  EmptyState.tsx  Input.tsx  Label.tsx  Modal.tsx  Pagination.tsx  SearchInput.tsx  Select.tsx  Spinner.tsx  Toast.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/pages/: AdminEquivalences.tsx  AdminMachineIps.tsx  AdminSignals.tsx  AdminUsers.tsx  LoginPage.tsx  PatientDashboard.tsx  PatientDetail.tsx  PatientHistory.tsx  PatientsPage.tsx  TherapyDetail.tsx
frontend/src/types/: index.ts
frontend/src/utils/: date.ts
scripts/: build-release.ps1  build-release.sh  dev.ps1  dev.sh
src/: app.rs  auth.rs  config.rs  database.rs  lib.rs  main.rs  models.rs
src/api/: auth.rs  comments.rs  config.rs  dashboard.rs  equivalences.rs  export.rs  machine_ips.rs  mod.rs  patients.rs  signals.rs  users.rs
src/components/: dashboard_chart.rs  empty_state.rs  error_banner.rs  layout.rs  loading_state.rs  login_form.rs  machine_ip_form.rs  mod.rs  modal.rs  patient_card.rs  patient_table.rs  stats_card.rs  table.rs
src/pages/: admin_machine_ips.rs  admin_users.rs  login.rs  mod.rs  patient_dashboard.rs  patient_detail.rs  patient_history.rs  patients.rs  therapy_detail.rs
src/styles/: glassmorphism.css
src/utils/: api.rs  auth.rs  excel.rs  mod.rs
static/: index.html
static/pkg/: monitor.d.ts  monitor.js  monitor_bg.wasm.d.ts
