[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[lib]
name = "monitor"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "monitor-server"
path = "src/main.rs"

[features]
default = ["ssr"]
ssr = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:sqlx", "dep:sqlx-sqlserver", "dep:jsonwebtoken", "dep:argon2", "dep:rand_core", "dep:rust_xlsxwriter", "dep:dotenvy", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"], optional = true }
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "postgres", "mysql", "chrono", "derive", "runtime-tokio"], optional = true }
sqlx-sqlserver = { path = "vendor/sqlx-sqlserver", features = ["chrono"], optional = true }
jsonwebtoken = { version = "9", optional = true }
argon2 = { version = "0.5", optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
rust_xlsxwriter = { version = "0.79", optional = true }
dotenvy = { version = "0.15", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }


